# metadynamics-plugin

./: CMakeLists.txt  CollectiveVariable_8cc.html  CollectiveVariable_8h.html  FindDFFT.cmake  FindHOOMD.cmake  IndexGrid_8cc.html  IndexGrid_8h.html  IntegratorMetaDynamics_8cc.html  IntegratorMetaDynamics_8h.html  LamellarOrderParameterGPU_8cc.html  LamellarOrderParameterGPU_8cu.html  LamellarOrderParameterGPU_8cuh.html  LamellarOrderParameterGPU_8h.html  LamellarOrderParameter_8h.html  annotated.html  classCollectiveVariable-members.html  classCollectiveVariable.html  classCollectiveVariableWrap-members.html  classCollectiveVariableWrap.html  classCollectiveVariableWrap__inherit__graph.map  classCollectiveVariableWrap__inherit__graph.md5  classCollectiveVariable__inherit__graph.map  classCollectiveVariable__inherit__graph.md5  classIndexGrid-members.html  classIndexGrid.html  classIntegratorMetaDynamics-members.html  classIntegratorMetaDynamics.html  classLamellarOrderParameter-members.html  classLamellarOrderParameter.html  classLamellarOrderParameterGPU-members.html  classLamellarOrderParameterGPU.html  classLamellarOrderParameterGPU__inherit__graph.map  classLamellarOrderParameterGPU__inherit__graph.md5  classLamellarOrderParameter__inherit__graph.map  classLamellarOrderParameter__inherit__graph.md5  classes.html  classmetadynamics_1_1cv_1_1__collective__variable-members.html  classmetadynamics_1_1cv_1_1__collective__variable.html  classmetadynamics_1_1cv_1_1__collective__variable__inherit__graph.map  classmetadynamics_1_1cv_1_1__collective__variable__inherit__graph.md5  (+47 more)
cppmodule/: AspectRatio.cc  AspectRatio.h  CMakeLists.txt  CollectiveVariable.cc  CollectiveVariable.h  CommunicatorGrid.cc  CommunicatorGrid.h  CommunicatorGridGPU.cc  CommunicatorGridGPU.cuh  CommunicatorGridGPU.h  DAFTGPU.cc  DAFTGPU.cu  DAFTGPU.cuh  DAFTGPU.h  IndexGrid.cc  IndexGrid.h  IntegratorMetaDynamics.cc  IntegratorMetaDynamics.cu  IntegratorMetaDynamics.cuh  IntegratorMetaDynamics.h  LamellarOrderParameter.cc  LamellarOrderParameter.h  LamellarOrderParameterGPU.cc  LamellarOrderParameterGPU.cu  LamellarOrderParameterGPU.cuh  LamellarOrderParameterGPU.h  OrderParameterMesh.cc  OrderParameterMesh.h  OrderParameterMeshGPU.cc  OrderParameterMeshGPU.cu  OrderParameterMeshGPU.cuh  OrderParameterMeshGPU.h  PathCollectiveVariable.cc  PathCollectiveVariable.h  module.cc
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  index.doc
metadynamics/: AspectRatio.cc  AspectRatio.h  CMakeLists.txt  CollectiveCallback.h  CollectiveVariable.cc  CollectiveVariable.h  CollectiveWrapper.cc  CollectiveWrapper.h  Density.cc  Density.h  IndexGrid.cc  IntegratorMetaDynamics.cc  IntegratorMetaDynamics.cu  IntegratorMetaDynamics.cuh  IntegratorMetaDynamics.h  LamellarOrderParameter.cc  LamellarOrderParameter.h  LamellarOrderParameterGPU.cc  LamellarOrderParameterGPU.cu  LamellarOrderParameterGPU.cuh  LamellarOrderParameterGPU.h  OrderParameterMesh.cc  OrderParameterMesh.h  OrderParameterMeshGPU.cc  OrderParameterMeshGPU.cu  OrderParameterMeshGPU.cuh  OrderParameterMeshGPU.h  SteinhardtQl.cc  SteinhardtQl.h  WellTemperedEnsemble.cc  WellTemperedEnsemble.cu  WellTemperedEnsemble.cuh  WellTemperedEnsemble.h  __init__.py  cv.py  integrate.py  module.cc  spherical_harmonics.hpp
pymodule/: CMakeLists.txt  __init__.py  cv.py  integrate.py
pymodule/metadynamics/: __init__.py  cv.py  integrate.py
test/: CMakeLists.txt  MPITestSetup.h  test_2d.py  test_communicator_grid.cc  test_mesh.py
